<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iJob</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="textView_hint_company_type">性质</string>
    <string name="textView_hint_workplace">地区</string>
    <string name="textView_hint_jobneed">岗位描述</string>
    <string name="onlineprofile">线上简历</string>
    <string name="offlineprofile">我的简历</string>
    <string name="inputhint">地区，职位</string>
    <string name="menu_settings">设置</string>
    <string name="menu_mainscene">主页</string>
    <string name="menu_message">消息</string>
    <string name="menu_focus">关注</string>
    <string name="menu_server">百宝箱</string>
    <string name="menu_version">版本更新</string>
    <string name="menu_request">问题反馈</string>
    <string name="menu_exit">退出</string>
    <string name="submit">保存</string>
     <string name="availableCity"></string>
    <string name="title_activity_city_select">CitySelectActivity</string>
    <string name="title_activity_set_follow">SetFollowActivity</string>

</resources>
