<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
	<com.ijob.preference.MenuPreference
	    android:key="a"
        android:title="@string/menu_mainscene"
        app:icon="@drawable/home"
	    />
    

    <com.ijob.preference.MenuPreference
        android:key="b"
        android:title="@string/menu_message"
        app:icon="@drawable/message"
        
        /> 

    <com.ijob.preference.MenuPreference
        android:key="c"
        android:title="@string/menu_focus"
         app:icon="@drawable/follow"
        />
    
    <Preference
        android:key="d"
        android:title="@string/menu_server"
        />
    
    <Preference
        android:key="e"
        android:title="@string/menu_version"
        />
    
    <Preference
        android:key="f"
        android:title="@string/menu_request"
        />
    
    <Preference
        android:key="g"
        android:title="@string/menu_exit"
        />
</PreferenceScreen>
   
 